--- a/index.css
+++ b/index.css
@@ -98,8 +98,10 @@ img {
     mix-blend-mode: multiply;
 }
 
-@media screen and (min-width: 320px) and (max-width: 500px) {
-
+@media screen and (min-width: 320px) and (max-width: 900px) {
+    body {
+        padding: 90px 50px;
+    }
 
     main {
         display: flex;
@@ -118,21 +120,32 @@ img {
 
     .upperpar h2 {
         width: 60%;
-        text-align: center;
     }
 
     .upper {
-        padding: 0;
+        padding: 30px;
+        display: flex;
+        width: 290px;
         height: auto;
+        border-radius: 0 0 5px 5px;
+        gap: 30px;
+    }
+
+    .upperpar {
+        justify-content: center;
+        align-items: center;
+        text-align: center;
     }
 
     .upperpar p {
         width: 55%;
-        text-align: center;
     }
 
     .lower {
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
     }
 }
